--- a/My-App/package.json
+++ b/My-App/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "my-app",
 	"version": "0.0.1",
+	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -19,5 +20,5 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+
 }
