title indentation fixed

--- a/.gitignore
+++ b/.gitignore
@@ -248,7 +248,7 @@ orleans.codegen.cs
 # (https://github.com/github/gitignore/pull/1529#issuecomment-104372622)
 #bower_components/
 
-# RIA/Silverlight projects
+# RIA/Silverlight gameOfLife
 Generated_Code/
 
 # Backup & report files from converting an old project file
@@ -266,7 +266,7 @@ ServiceFabricBackup/
 *.ldf
 *.ndf
 
-# Business Intelligence projects
+# Business Intelligence gameOfLife
 *.rdl.data
 *.bim.layout
 *.bim_*.settings
