--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,26 @@
 blas=1.0=mkl
 brotli-python=1.0.9=py312hd77b12b_8
 bzip2=1.0.8=h2bbff1b_6
-ca-certificates=2024.11.26=haa95532_0
+ca-certificates=2024.9.24=haa95532_0
 certifi=2024.8.30=py312haa95532_0
 charset-normalizer=3.3.2=pyhd3eb1b0_0
 colorama=0.4.6=pypi_0
 contourpy=1.3.1=pypi_0
-cpuonly=2.0=0
+cuda-cccl=12.6.77=0
+cuda-cccl_win-64=12.6.77=0
+cuda-cudart=12.4.127=0
+cuda-cudart-dev=12.4.127=0
+cuda-cupti=12.4.127=0
+cuda-libraries=12.4.1=0
+cuda-libraries-dev=12.4.1=0
+cuda-nvrtc=12.4.127=0
+cuda-nvrtc-dev=12.4.127=0
+cuda-nvtx=12.4.127=0
+cuda-opencl=12.6.77=0
+cuda-opencl-dev=12.6.77=0
+cuda-profiler-api=12.6.77=0
+cuda-runtime=12.4.1=0
+cuda-version=12.6=3
 cycler=0.12.1=pypi_0
 decorator=5.1.1=pypi_0
 expat=2.6.3=h5da7b33_0
@@ -26,9 +40,27 @@ jpeg=9e=h827c3e9_3
 kiwisolver=1.4.7=pypi_0
 lcms2=2.12=h83e58a3_0
 lerc=3.0=hd77b12b_0
+libcublas=12.4.5.8=0
+libcublas-dev=12.4.5.8=0
+libcufft=11.2.1.3=0
+libcufft-dev=11.2.1.3=0
+libcurand=10.3.7.77=0
+libcurand-dev=10.3.7.77=0
+libcusolver=11.6.1.9=0
+libcusolver-dev=11.6.1.9=0
+libcusparse=12.3.1.170=0
+libcusparse-dev=12.3.1.170=0
 libdeflate=1.17=h2bbff1b_1
 libffi=3.4.4=hd77b12b_1
 libjpeg-turbo=2.0.0=h196d8e1_0
+libnpp=12.2.5.30=0
+libnpp-dev=12.2.5.30=0
+libnvfatbin=12.6.77=0
+libnvfatbin-dev=12.6.77=0
+libnvjitlink=12.4.127=0
+libnvjitlink-dev=12.4.127=0
+libnvjpeg=12.3.1.117=0
+libnvjpeg-dev=12.3.1.117=0
 libpng=1.6.39=h8cc25b3_0
 libtiff=4.5.1=hd77b12b_0
 libuv=1.48.0=h827c3e9_0
@@ -44,7 +76,7 @@ mkl_random=1.2.8=py312h0158946_0
 moviepy=2.1.1=pypi_0
 mpmath=1.3.0=py312haa95532_0
 networkx=3.2.1=py312haa95532_0
-numpy=2.1.3=pypi_0
+numpy=2.0.1=py312hfd52020_1
 numpy-base=2.0.1=py312h4dde369_1
 openjpeg=2.5.2=hae555c5_0
 openssl=3.0.15=h827c3e9_0
@@ -57,8 +89,9 @@ pysocks=1.7.1=py312haa95532_0
 python=3.12.0=h1d929f7_0
 python-dateutil=2.9.0.post0=pypi_0
 python-dotenv=1.0.1=pypi_0
-pytorch=2.5.1=py3.12_cpu_0
-pytorch-mutex=1.0=cpu
+pytorch=2.5.1=py3.12_cuda12.4_cudnn9_0
+pytorch-cuda=12.4=h3fd98bf_7
+pytorch-mutex=1.0=cuda
 pyyaml=6.0.2=py312h827c3e9_0
 requests=2.32.3=py312haa95532_1
 setuptools=75.1.0=py312haa95532_0
@@ -67,8 +100,8 @@ sqlite=3.45.3=h2bbff1b_0
 sympy=1.13.2=py312haa95532_0
 tbb=2021.8.0=h59b6b97_0
 tk=8.6.14=h0416ee5_0
-torchaudio=2.5.1=py312_cpu
-torchvision=0.20.1=py312_cpu
+torchaudio=2.5.1=pypi_0
+torchvision=0.20.1=pypi_0
 tqdm=4.67.1=pypi_0
 typing_extensions=4.11.0=py312haa95532_0
 tzdata=2024b=h04d1e81_0
