--- a/web/biome.jsonc
+++ b/web/biome.jsonc
@@ -1,4 +1,7 @@
 {
 	"$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
+	"javascript": {
+		"globals": ["React"]
+	},
 	"extends": ["@angablue/biome-config"]
 }
