chore: port wgpu canvas implementation

--- a/web/package.json
+++ b/web/package.json
@@ -9,9 +9,11 @@
 		"lint": "biome check --fix --error-on-warnings"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^2.5.1",
 		"next": "15.1.6",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"react-redux": "^9.2.0"
 	},
 	"devDependencies": {
 		"@angablue/biome-config": "^1.0.1",
