--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -22,6 +22,6 @@
 			"@/*": ["./src/*"]
 		}
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "managers/EventManager.ts"],
 	"exclude": ["node_modules"]
 }
