--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"@webgpu/types": "^0.1.54",
 		"postcss": "^8",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5"
