--- a/web/package.json
+++ b/web/package.json
@@ -3,13 +3,14 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbopack",
+		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
 		"lint": "biome check --fix --error-on-warnings"
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.5.1",
+		"clsx": "^2.1.1",
 		"next": "15.1.6",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
