--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,5 +1,5 @@
 {
-	"$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
+	"$schema": "./web/node_modules/@biomejs/biome/configuration_schema.json",
 	"javascript": {
 		"globals": ["React"]
 	},
