fix: yml file now forces install pnpm

--- a/amplify.yml
+++ b/amplify.yml
@@ -4,6 +4,7 @@ frontend:
         preBuild:
             commands:
                 - cd web
+                - npm install -g pnpm
                 - pnpm install
         build:
             commands:
