--- a/web/public/manifest.json
+++ b/web/public/manifest.json
@@ -15,7 +15,7 @@
 			"purpose": "maskable"
 		}
 	],
-	"theme_color": "#ffffff",
+	"theme_color": "#7065f9",
 	"background_color": "#ffffff",
 	"display": "standalone"
 }
