--- a/web/package.json
+++ b/web/package.json
@@ -9,12 +9,10 @@
 		"lint": "biome check --fix --error-on-warnings"
 	},
 	"dependencies": {
-		"@reduxjs/toolkit": "^2.6.0",
 		"clsx": "^2.1.1",
 		"next": "15.2.0",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
-		"react-redux": "^9.2.0"
+		"react-dom": "^19.0.0"
 	},
 	"devDependencies": {
 		"@angablue/biome-config": "^1.0.1",
