--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,8 @@
 		"clsx": "^2.1.1",
 		"next": "15.2.0",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"wgpu-matrix": "^3.4.0"
 	},
 	"devDependencies": {
 		"@angablue/biome-config": "^1.0.1",
