chore: upgrade deps

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,10 +1,11 @@
 {
+	"root": false,
 	"$schema": "./web/node_modules/@biomejs/biome/configuration_schema.json",
 	"javascript": {
 		"globals": ["React"]
 	},
 	"files": {
-		"ignore": ["node_modules", "web/.next", "web/node_modules", "web/out"]
+		"includes": ["**", "!**/node_modules", "!**/web/.next", "!**/web/node_modules", "!**/web/out"]
 	},
 	"extends": ["@angablue/biome-config"]
 }
