--- a/web/package.json
+++ b/web/package.json
@@ -10,19 +10,20 @@
 	},
 	"dependencies": {
 		"clsx": "^2.1.1",
-		"next": "15.2.0",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"next": "15.4.6",
+		"react": "^19.1.1",
+		"react-dom": "^19.1.1"
 	},
 	"devDependencies": {
-		"@angablue/biome-config": "^1.0.1",
-		"@biomejs/biome": "^1.9.4",
-		"@types/node": "^22.13.5",
-		"@types/react": "^19.0.10",
-		"@types/react-dom": "^19.0.4",
-		"@webgpu/types": "^0.1.54",
-		"postcss": "^8.5.3",
-		"tailwindcss": "^3.4.17",
-		"typescript": "^5.7.3"
+		"@angablue/biome-config": "^1.1.0",
+		"@biomejs/biome": "^2.1.4",
+		"@tailwindcss/postcss": "^4.1.11",
+		"@types/node": "^24.2.1",
+		"@types/react": "^19.1.10",
+		"@types/react-dom": "^19.1.7",
+		"@webgpu/types": "^0.1.64",
+		"postcss": "^8.5.6",
+		"tailwindcss": "^4.1.11",
+		"typescript": "^5.9.2"
 	}
 }
