--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -23,6 +23,12 @@
 			"@/*": ["./*"]
 		}
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/about/page.tsx"],
+	"include": [
+		"next-env.d.ts",
+		"**/*.ts",
+		"**/*.tsx",
+		".next/types/**/*.ts",
+		"app/about/page.tsx"
+	],
 	"exclude": ["node_modules"]
 }
