--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,11 +1,11 @@
 {
-	"root": false,
+	"root": true,
 	"$schema": "./web/node_modules/@biomejs/biome/configuration_schema.json",
 	"javascript": {
 		"globals": ["React"]
 	},
 	"files": {
-		"includes": ["**", "!**/node_modules", "!**/web/.next", "!**/web/node_modules", "!**/web/out"]
+		"includes": ["!node_modules", "!web/.next", "!web/node_modules", "!web/out"]
 	},
 	"extends": ["@angablue/biome-config"]
 }
