--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
 	"workspaces": [
 		"web"
 	],
+	"scripts": {
+		"lint": "biome check --fix --error-on-warnings"
+	},
 	"devDependencies": {
 		"@angablue/biome-config": "^1.1.0",
 		"@biomejs/biome": "^2.1.4"
