--- a/web/package.json
+++ b/web/package.json
@@ -9,10 +9,14 @@
 		"lint": "biome check --fix --error-on-warnings"
 	},
 	"dependencies": {
+		"@radix-ui/react-slot": "^1.2.3",
+		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"lucide-react": "^0.544.0",
 		"next": "15.4.6",
 		"react": "^19.1.1",
-		"react-dom": "^19.1.1"
+		"react-dom": "^19.1.1",
+		"tailwind-merge": "^3.3.1"
 	},
 	"devDependencies": {
 		"@angablue/biome-config": "^1.1.0",
@@ -24,6 +28,7 @@
 		"@webgpu/types": "^0.1.64",
 		"postcss": "^8.5.6",
 		"tailwindcss": "^4.1.11",
+		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.2"
 	}
 }
