--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
 		"next": "15.5.4",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
+		"simple-icons": "^15.16.0",
 		"tailwind-merge": "^3.3.1"
 	},
 	"devDependencies": {
