--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,9 @@
 		"lint": "biome check --fix --error-on-warnings"
 	},
 	"dependencies": {
+		"@radix-ui/react-checkbox": "^1.3.3",
+		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-slider": "^1.3.6",
 		"@radix-ui/react-slot": "^1.2.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
