--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
 		"next": "15.5.4",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
+		"react-icons": "^5.5.0",
 		"tailwind-merge": "^3.3.1"
 	},
 	"devDependencies": {
